--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Piedra, papel, tijera</title>
 </head>
 <body>
-  <button class="boton-jugada" data-jugada="piedra">Piedra</button>
-  <button class="boton-jugada" data-jugada="papel">Papel</button>
-  <button class="boton-jugada" data-jugada="tijera">Tijera</button>
-  <div id="resultados"></div>
+  <button class="boton-jugada" id="piedra">Piedra</button>
+  <button class="boton-jugada" id="papel">Papel</button>
+  <button class="boton-jugada" id="tijera">Tijera</button>
+  <div id="resultados">winner</div>
   <p id="contador-usuario">Tus puntos: 0</p>
   <p id="contador-ordenador">Puntos de la máquina: 0</p>
   <script src="./js/script.js"></script>
